Lock to 64-bit Linux and Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.31)
 
 project(Example)
 
+include(${CMAKE_SOURCE_DIR}/.cmake/platforms.cmake)
 include(${CMAKE_SOURCE_DIR}/.cmake/cpm.cmake)
 
 add_subdirectory(packages/game)
